syntax = "proto3";
option go_package = "./;pb";
package techschool.pcbook;

import "memory_message.proto";

message Filter{
    double max_price_usd=1;
    uint32 min_cou_cores=2;
    double min_cpu_hz=3;
    Memory min_ram=4;
}
