syntax = "proto3";
option go_package = "./;pb";
package techschool.pcbook;

import "memory_message.proto";

message CPU {
  string brand = 1;
  string name = 2;
  uint32 numbers_cores = 3;
  uint32 numbers_threads = 4;
  double min_ghz = 5;
  double max_ghz = 6;
}
message GPU {
  string brand = 1;
  string name = 2;
  double min_ghz = 3;
  double max_ghz = 4;
  Memory memory = 5;
}